fix whitespace

--- a/src/jg/coop/css/layout/_main-sections.scss
+++ b/src/jg/coop/css/layout/_main-sections.scss
@@ -6,8 +6,8 @@
 
 .section {
   @extend .container-lg;
-  padding-top: $main-spacer - $spacer;
-  padding-bottom: $main-spacer - $spacer;
+  padding-top: $main-spacer;
+  padding-bottom: $main-spacer;
 }
 
 .section.standout {
